--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -19,7 +19,7 @@ footer {
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
-    margin-top: 20px;
+    margin-bottom: 75px;
 }
 .logo-bosmans{
     width: 150px;
@@ -35,13 +35,14 @@ footer {
     color: #bd0d0d;
     margin-bottom: 30px;
 }
-.adresse{
-    margin-bottom: 50px;
-}
+
 .footer-links{
     display: flex;
     flex-direction: column;
 
+}
+.adresse{
+    margin: 25px 0px;
 }
 .horaire{
     padding: 6px 0px;
@@ -88,6 +89,17 @@ footer {
     
     
 }
+.infos-contact p{
+    padding: 10px 0px;
+}
+.infos-contact a{
+    color: #fff;
+    text-decoration: none;
+    transition: 0.3s;
+}
+.infos-contact a:hover{
+    color: #bd0d0d;
+}
 
 @media (max-width:1024px){
     .footer-contents{
@@ -119,10 +131,19 @@ footer {
     .footer-credits{
         gap: 20px;
         margin-top: 20px;
-        flex-direction: column;
+
     }
     .infos-contact p{
         color: white !important;
+    }
+    .footer-infos{
+        min-height: 30vh;
+    }
+    .footer-horaire{
+        min-height: 31vh;
+    }
+    .footer-links{
+        min-height: 31vh;
     }
 
 }
@@ -130,5 +151,23 @@ footer {
 @media (max-width:800px){
     .title-links{
         margin: 0;
+    }
+    .footer-infos{
+        min-height: 30vh;
+    }
+    .footer-horaire{
+        min-height: 31vh;
+    }
+    .footer-links{
+        min-height: 31vh;
+    }
+}
+@media (max-width:540px){
+    .footer-credits{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .dots{
+        display: none;
     }
 }
