--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -1,74 +1,80 @@
-.swiper {
+.carousel-container{
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 55vh;
+  margin: 50px auto;
+}
+.carousel .slide{
   width: 100%;
-  min-height: 100vh;
-  background-color: #ebe8e8;
-  color: rgb(0, 0, 0);
-  z-index: 0;
-}
-.container-about{
-    background-color: rgb(64, 54, 54);
-    min-height: 100vh;
-}
-.swiper-slide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  text-align: center;
-  background: #ebe8e8;
-  /* Flex container for centering the content */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.swiper-wrapper{
-    margin-top: 105px;
-}
-.slider-contenu img {
-   /* Adjust based on your needs */
-  width: 80%;
-  max-height: 40vh;
-  border-radius: 8px; /* Optional: for rounded corners */
-  object-fit: cover;
-  margin:  auto;
-}
-
-/* Styling for the slide's content */
-.slider-contenu {
-  max-width: 80%;
-  margin: 25px auto;
-  padding: 25px;
   height: 100%;
 }
-
-/* Adjust the size and color of pagination, navigation buttons, and scrollbar here */
-.swiper-pagination-bullet {
-  background: #ff0000;
-  opacity: 1;
+.carousel{
+  height: 100%;
+  width: 40%;
+}
+.slide{
+  width: 100%;
+  height: 100%;
+}
+.slider{
+  height: 100%;
+}
+.slider div{
+  height: 100%;
+}
+.carousel-slide{
+  width: 100%;
+  height: 100%;
+}
+.slider-wrapper{
+  width: 100%;
+  height: 100%;
+}
+.carousel-images{
+  width: 100%;
+  height: 100%;
+  object-fit: contain !important;
+}
+.carousel-root{
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.carousel-status{
+  display: none;
+}
+.control-arrow {
+  opacity: 1!important; /* Make arrows always visible */
+  background: #D32F2F!important; /* Optional: Add a background for better visibility */
+  height: 12%;
+  align-self: center;
 }
 
-.swiper-button-next,
-.swiper-button-prev {
-  color: #ff0000;
+.carousel .control-arrow:hover {
+  background: rgba(0, 0, 0, 0.7)!important; /* Optional: Darken background on hover */
 }
 
-.swiper-scrollbar {
-  background: rgba(0, 0, 0, 0.1);
+.carousel .control-prev.control-arrow:before {
+  border-right: 8px solid white; /* Customize the arrow color */
 }
 
-.swiper-scrollbar-drag {
-  background: #ff0000;
+.carousel .control-next.control-arrow:before {
+  border-left: 8px solid white; /* Customize the arrow color */
 }
-.wait{
+.about-text{
   display: flex;
+  flex-direction: column;
+  width: 55%;
+  margin: 35px auto;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  min-height: 88vh;
 }
-.wait a {
-
-  font-size: 1.5rem;
-
+.about-text p{
+  margin-bottom: 15px;
+}
+.about-title{
+  width: 55%;
+  margin: 50px auto;
 }
