--- a/src/app/styles/index.css
+++ b/src/app/styles/index.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(118, 98, 98, 0.304);
 }
 
 .wall::before{
@@ -22,12 +23,11 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url('../../../public/images/garage.jpg');
+   
     background-position: center center;
     background-repeat: no-repeat;
     filter: brightness(0.3);
     z-index: 0; /* Ensure the background is behind content */
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url('../../../public/images/garage.jpg');
 }
 
 .wall img{
