--- a/src/app/styles/banner.css
+++ b/src/app/styles/banner.css
@@ -2,6 +2,7 @@
     position: relative;
     height: 10vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color:#8d1414 ;
@@ -24,6 +25,9 @@
     opacity: 0;
     height: 0;
     padding: 0 10px; /* Adjust padding if necessary */
+}
+.banner-title{
+    display: inline-block;
 }
 
 @media (max-width: 768px) {
